# teste_tecnico_mauricio

./: Dockerfile  README.md  base_EURO.csv  base_USD.csv  final.csv  main.py  pyproject.toml  requirementes.txt  utils.py
